[FIX] web_editor: ensure document filename doesn't overflow its cell
The media modal's document tab has cells with icons and filenames. If
the filename was too long, it would overflow its cell, which caused an
ugly design glitch. This ensures an ellipsis on the filename when it is
too long.

X-original-commit: 8a4f4bf04bd5e5f9cf827273ea27a189a43c2515

--- a/addons/web_editor/static/src/scss/wysiwyg.scss
+++ b/addons/web_editor/static/src/scss/wysiwyg.scss
@@ -240,6 +240,10 @@ body .modal {
                     }
                 }
 
+                .o_file_name {
+                    @include o-text-overflow;
+                }
+
                 &:hover {
                     .o_existing_attachment_optimize, .o_existing_attachment_remove {
                         opacity: 1;
